@@ -1,4 +1,5 @@
 0.04
+ - Fix Item->obj2struct conditions.
 
 0.03 2020-12-14T11:30:28+01:00
  - Add tests.
